k8s/ddi.continuous.delivery.worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddi-continuous-delivery-worker
spec:
  selector:
    matchLabels:
      app: ddi-continuous-delivery-worker
  replicas: 1
  template:
    metadata:
      labels:
        app: ddi-continuous-delivery-worker
    spec:
      serviceAccountName: k8s-101-role
      containers:
        - name: ddi-continuous-delivery-worker
          image: omicsdi/ddi-continuous-delivery-worker:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /var/run
              name: docker-sock
            - mountPath: /git-repo
              name: git-repo
      volumes:
        - name: docker-sock
          hostPath:
            path: /var/run
        - name: git-repo
          hostPath:
            path: /var/git-repo
---
apiVersion: v1
kind: Service
metadata:
  name: ddi-continuous-delivery-worker
  labels:
    app: ddi-continuous-delivery-worker
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: ddi-continuous-delivery-worker
