k8s/ddi.continuous.delivery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddi-continuous-delivery
spec:
  selector:
    matchLabels:
      app: ddi-continuous-delivery
  replicas: 1
  template:
    metadata:
      labels:
        app: ddi-continuous-delivery
    spec:
      containers:
        - name: ddi-continuous-delivery
          image: omicsdi/ddi-continuous-delivery:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ddi-continuous-delivery
  labels:
    app: ddi-continuous-delivery
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: ddi-continuous-delivery
